tests/sksl/errors/InlineDivideByZero.glsl
### Compilation failed:

error: 6: division by zero
error: 7: division by zero
error: 8: division by zero
3 errors
